part rodrigo completo

--- a/informa_covid/pubspec.yaml
+++ b/informa_covid/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -58,6 +59,9 @@ flutter:
     - assets/white-logo-unifenas.png
     - assets/word.png
     - assets/yes.png
+    - assets/spalsh-screen.png
+    - assets/logo-unifenas.svg
+    - assets/logo-covid.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
