contato covid, diagnosticado covid, telas Rodolfo2709

--- a/informa_covid/pubspec.yaml
+++ b/informa_covid/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
     - assets/no.png
     - assets/saude.png
     - assets/tchau.png
+    - assets/tosse.png
     - assets/white-logo-covid.png
     - assets/white-logo-unifenas.png
     - assets/word.png
