--- a/informa_covid/android/app/build.gradle
+++ b/informa_covid/android/app/build.gradle
@@ -39,8 +39,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.informacovid"
-        minSdkVersion 16
+        applicationId "com.company.informacovid"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -60,6 +60,6 @@ flutter {
 }
 
 dependencies {
-
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
