--- a/informa_covid/pubspec.yaml
+++ b/informa_covid/pubspec.yaml
@@ -35,6 +35,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.7.0"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path_android: "assets/logo-covid.png"
+  image_path_ios: "assets/logo-covid.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
